!Fix flat select ban-group selected option z-index

--- a/packages/vapor/scss/controls/flat-select.scss
+++ b/packages/vapor/scss/controls/flat-select.scss
@@ -98,6 +98,10 @@
 
     border-radius: 0;
 
+    &:focus {
+      z-index: 1;
+    }
+
     &:first-child {
       border-radius: $border-radius 0 0 $border-radius;
     }
